[project]
name = "tuner"
version = "0.1.0"
description = "Tuner monorepo: backend + Behave feature tests"
requires-python = "==3.13.*"
dependencies = [
    "fastapi-clean-example",
    "behave>=1.2.6",
    "httpx>=0.27",
]

# ---------------------------------------------------------------------------
# Dependency groups visible at the workspace root.
# "dev" pulls in every tool needed for backend development + feature tests.
# ---------------------------------------------------------------------------
[dependency-groups]
bdd = ["behave>=1.2.6", "httpx>=0.27","playwright>=1.49"]
# agents-skills = ["some-agent-sdk>=1.0"]
# dev = [{ include-group = "bdd" }, "ruff>=0.12"]

# ---------------------------------------------------------------------------
# This root project is NOT a distributable package — it is a virtual
# workspace root that only orchestrates dependencies for the monorepo.
# ---------------------------------------------------------------------------
[tool.uv]
package = false

[tool.uv.workspace]
members = ["backend"]

[tool.uv.sources]
fastapi-clean-example = { workspace = true }

# ---------------------------------------------------------------------------
# Behave configuration (applies when running `behave` from workspace root)
# ---------------------------------------------------------------------------
[tool.behave]
paths = ["features"]
stage = "http"
